--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Inter', sans-serif;
+    font-weight: 500;
     background-color: white;
 }
 
@@ -34,5 +35,50 @@ body {
     padding: 2vh;
     width: 50%;
     background-color:whitesmoke;
-    font-size: 3vh;
+    font-size: 2.75vh;
+    line-height: 3.5vh;
+}
+
+#content-view strong {
+    font-weight: 700;
+}
+#content-view h1 {
+    font-size: 2em;
+    line-height: 2em;
+}
+#content-view h2 {
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+#content-view h3 {
+    font-size: 1.33em;
+    line-height: 1.33em;
+}
+#content-view h4 {
+    font-size: 1.17em;
+    line-height: 1.17em;
+}
+#content-view h5 {
+    font-size: 0.83em;
+    line-height: 0.83em;
+}
+#content-view h6 {
+    font-size: 0.67em;
+    line-height: 0.67em;
+}
+#content-view p code {
+    font-family: courier, monospace;
+    background-color: #dee2e6;
+    border-radius: 0.775vh;
+}
+#content-view pre {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #dee2e6;
+    font-family: courier, monospace;
+    
+    margin-top: 2.75vh;
+    margin-bottom: 2.75vh;
+
+    line-height: 4vh;
 }
