--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -44,9 +44,6 @@ center,
 dl,
 dt,
 dd,
-ol,
-ul,
-li,
 fieldset,
 form,
 label,
@@ -103,10 +100,6 @@ section {
 body {
   line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
-}
 blockquote,
 q {
   quotes: none;
@@ -129,5 +122,23 @@ input {
   all: unset;
 }
 textarea {
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 100%;
+  overflow: auto;
+  resize: none;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+button {
   all: unset;
+  background-color: black;
+  color: white;
+}
+button:active {
+  background-color: blue;
 }
