--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,16 +1,16 @@
 body {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    background-color: white;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
     background-color: seagreen;
     width: 100%;
-    height: 7vh; /*header height*/
+    height: 6.1vh; /*header height*/
 }
 .header-img {
-    width: 5%;
     height: inherit; /*7vh inherit*/
     box-sizing: border-box;
     border: 1px solid black;
@@ -19,24 +19,29 @@ body {
 .content {
     display: flex;
     flex-direction: row;
-    height: 93vh;
+    height: 90.9vh; /**/
 }
 
 #content-textarea {
     width: 50%;
-    padding: 2vh;
+    padding: 1.75vh;
     font-size: 2.75vh;
+    line-height: 3.4375vh;
 }
 #content-textarea::placeholder {
     color: gray;
 }
 
 #content-view {
-    padding: 2vh;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    vertical-align: middle;
+    overflow: auto;
+    padding: 1.75vh;
     width: 50%;
-    background-color:whitesmoke;
+    background-color: whitesmoke;
     font-size: 2.75vh;
-    line-height: 3.5vh;
+    line-height: 3.4375vh;
 }
 
 #content-view strong {
@@ -44,41 +49,70 @@ body {
 }
 #content-view h1 {
     font-size: 2em;
-    line-height: 2em;
+    margin: 0.75em 0 0.75em 0;
 }
 #content-view h2 {
     font-size: 1.5em;
-    line-height: 1.5em;
+    margin: 0.675em 0 0.675em 0;
 }
 #content-view h3 {
     font-size: 1.33em;
-    line-height: 1.33em;
+    margin: 0.5825em 0 0.5825em 0;
+
 }
 #content-view h4 {
     font-size: 1.17em;
-    line-height: 1.17em;
+    margin: 0.5425em 0 0.5425em 0;
 }
 #content-view h5 {
     font-size: 0.83em;
-    line-height: 0.83em;
+    margin: 0.4575em 0 0.4575em 0;
 }
 #content-view h6 {
     font-size: 0.67em;
-    line-height: 0.67em;
+    margin: 0.4175em 0 0.4175em;
 }
-#content-view p code {
-    font-family: courier, monospace;
-    background-color: #dee2e6;
-    border-radius: 0.775vh;
+#content-view code {
+    background-color: #e9ecef;
+    font-family: 'Source Code Pro', monospace;
 }
 #content-view pre {
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #dee2e6;
-    font-family: courier, monospace;
-    
-    margin-top: 2.75vh;
-    margin-bottom: 2.75vh;
-
-    line-height: 4vh;
+    background-color: #e9ecef;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    padding-left: 1vh;
+    padding-right: 1vh;
+    font-family: 'Source Code Pro', monospace;
+}
+#content-view em {
+    font-style: italic;
+}
+#content-view del {
+    text-decoration: line-through;
+}
+#content-view a {
+    color: royalblue;
+}
+#content-view a:hover {
+    text-decoration: underline;
+}
+#content-view img {
+    width: 100%;
+}
+.footer {
+    display: flex;
+    flex-direction: row;
+    height: 3vh;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 2.375vh;
+}
+.footer-left {
+    width: 50%;
+    background-color: white;
+    text-align: center;
+}
+.footer-right {
+    width: 50%;
+    background-color: whitesmoke;
 }
