--- a/src/styles/dark-theme.css
+++ b/src/styles/dark-theme.css
@@ -21,7 +21,7 @@
         border-top: 1px solid white;
         border-bottom: 1px solid white;
         border-right: 1px solid white;
-        background-color: gray;
+        background-color: darkgray;
         color: white;
     }
 }
