--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,8 @@ body {
 
 .header {
     box-sizing: border-box;
+    border-top: 1px solid black;
+    border-right: 1px outset black;
     display: flex;
     justify-content: space-between;
     background-color: seagreen;
@@ -13,6 +15,8 @@ body {
 }
 .header-img {
     box-sizing: border-box;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
     height: inherit; /*7vh inherit*/
 }
 
@@ -24,10 +28,14 @@ body {
 
 #content-textarea {
     box-sizing: border-box;
+    border: 1px solid black;
     width: 50%;
     padding: 1.75vh;
     font-size: 2.75vh;
     line-height: 3.4375vh;
+}
+#content-textarea::placeholder {
+    color: gray;
 }
 #content-textarea:focus {
     border: 1px solid red;
@@ -35,6 +43,10 @@ body {
 
 #content-view {
     box-sizing: border-box;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    background-color: whitesmoke;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     vertical-align: middle;
